src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Sous_type_indisponibilit__c</fullName>
        <label>Sous-type indisponibilité</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sinistre / Travaux / Santé</fullName>
                </value>
                <value>
                    <fullName>Problème de synchronisation</fullName>
                </value>
                <value>
                    <fullName>Panne PDA</fullName>
                </value>
                <value>
                    <fullName>Injoignabilité</fullName>
                </value>
                <value>
                    <fullName>Qualité de service</fullName>
                </value>
                <value>
                    <fullName>Anomalie colis</fullName>
                    <isActive>false</isActive>
                    <label>Anomalie colis</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statut_TECH__c</fullName>
        <formula>AND(
NOT(ISPICKVAL(Status, &quot;10&quot;)),
NOT(ISPICKVAL(Status, &quot;11&quot;)),
NOT(ISPICKVAL(Status, &quot;Terminée&quot;)),
NOT(ISPICKVAL(Status, &quot;En attente planification&quot;)),
NOT(ISPICKVAL(Status, &quot;En attente visite animateur réseau&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statut_TECH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SupInf__c</fullName>
        <description>Champ tech, calcul date de fin. Utilisé dans les flow comme variable</description>
        <formula>Indisponibilite__r.Date_de_debut__c + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SupInf</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Synchronisation_du_moyen_de_scan__c</fullName>
        <description>Champ tech pour vue de liste</description>
        <formula>Account.Derniere_synchronisation_statut__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Synchronisation du moyen de scan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taux_devoye__c</fullName>
        <formula>Alert__r.Missguided_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux de dévoyé</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tech_Age_betwwen_13_30__c</fullName>
        <description>Technical field for retporting or listview criteria to know if the request exist betwwen 13 and 30 days</description>
        <formula>IF(Age_de_la_requete__c &gt; 13 &amp;&amp; Age_de_la_requete__c &lt; 30, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech 13 &gt; Age &gt; 30</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Age_betwwen_7_13__c</fullName>
        <description>Technical field for retporting or listview criteria to know if the request exist betwwen 7 and 13 days</description>
        <formula>IF(Age_de_la_requete__c &gt; 7 &amp;&amp; Age_de_la_requete__c &lt; 13, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech 7 &gt; Age &gt; 13</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Alert_Average_inflow__c</fullName>
        <formula>Alert__r.Average_inflow__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_Alert_Average_inflow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Alert_Exceeding_rate__c</fullName>
        <formula>Alert__r.Exceeding_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_Alert_Exceeding_rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tech_Alert_saturation_rate__c</fullName>
        <formula>Alert__r.saturation_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_Alert_saturation_rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tech_Inactive_Owner__c</fullName>
        <label>Tech Inactive Owner</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Is_Manual_Modif__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech_Is_Manual_Modif</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Is_Owner_Planification__c</fullName>
        <description>Ce champ est coché lorsque le propriétaire de la requête est la file d&apos;attente &quot;PUS_FR_Planification &quot; ou un(e) utilisateur/trice qui a la fonction &quot;CHARGE DE PLANIFICATION&quot;.</description>
        <formula>OR(OwnerId = LEFT( $CustomMetadata.Association_Record_Type_et_pays__mdt.FR.ID_PlanificationQueue__c ,15),CONTAINS(Owner:User.Title, &apos;CHARGE DE PLANIFICATION&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_Is_Owner_Planification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Visibilite_DA__c</fullName>
        <description>Ce champ permet de gérer la visibilité des requêtes DA dans les vues de liste</description>
        <formula>AND(
   OR( ISPICKVAL(Status,&quot;0&quot;),
      ISPICKVAL(Status,&quot;1&quot;),
      ISPICKVAL(Status,&quot;7&quot;),
      ISPICKVAL(Status,&quot;8&quot;),
      ISPICKVAL(Status,&quot;9&quot;),
      ISPICKVAL(Status,&quot;10&quot;),
      AND(ISPICKVAL(Status,&quot;2&quot;),IF( CONTAINS(  $Label.RT_France_Requete ,  RecordType.Id ) , (Today()-Date_appel_1__c)&gt; VALUE($Label.DA_PUS_FR_Duree_Entre_Appel),(Today()-Date_appel_1__c)&gt; VALUE( $Label.DA_INT_Duree_Entre_Appel ) )),
	  AND(ISPICKVAL(Status,&quot;3&quot;),IF( CONTAINS(  $Label.RT_France_Requete ,  RecordType.Id ) , (Today()-Date_appel_2__c)&gt; VALUE($Label.DA_PUS_FR_Duree_Entre_Appel),(Today()-Date_appel_2__c)&gt; VALUE( $Label.DA_INT_Duree_Entre_Appel ) )),
    AND(ISPICKVAL(Status,&quot;4&quot;),(Today()-Date_appel_3__c)&gt; VALUE($Label.DA_PUS_FR_Duree_Entre_Appel)),
      AND(ISPICKVAL(Status,&quot;5&quot;),(Today()-Date_changem_vers_Prolongation__c)&gt; VALUE($Label.DA_PUS_FR_Duree_Entre_Appel)),
      AND(ISPICKVAL(Status,&quot;6&quot;),(Today()-Date_appel_5__c)&gt; VALUE($Label.DA_PUS_FR_Duree_Entre_Appel)), 
	  AND(ISPICKVAL(Status,&quot;12&quot;),(Today()-Date_appel_3__c)&gt; VALUE($Label.DA_INT_Duree_Entre_Appel)),
	  AND(ISPICKVAL(Status,&quot;13&quot;),(Today()-Date_appel_4__c)&gt; VALUE($Label.DA_INT_Duree_Entre_Appel)),
	  AND(ISPICKVAL(Status,&quot;14&quot;),(Today()-Date_appel_5__c)&gt; VALUE($Label.DA_INT_Duree_Entre_Appel))
      ),
   OR(
      ISBLANK( Date_de_rappel_planifiee__c ),
      (Today()- Date_de_rappel_planifiee__c&gt;=0)
      )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visibilité DA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_is_Owner_GM__c</fullName>
        <description>Détermine si le propriétaire de la requête est la file d&apos;attente de la Gestion Matériel ou s&apos;il s&apos;agit d&apos;un des utilisateurs de la Gestion Matériel.(Champ utilisé dans la vue de liste 003-Toutes les requêtes GM). Attention, la configuration de la file d&apos;attente ne contient pas toujours des personnes de la Gestion Matérielle.</description>
        <formula>OR(OwnerId = LEFT( $CustomMetadata.Association_Record_Type_et_pays__mdt.FR.ID_GestMatQueue__c ,15),CONTAINS(Owner:User.Title, &apos;GESTIONNAIRE MATERIEL&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_is_Owner_GM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_is_less_7__c</fullName>
        <description>Technical field for retporting or listview criteria to know if the request exist less than 7 days</description>
        <formula>Age_de_la_requete__c &lt; 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech -7j</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_is_more_30__c</fullName>
        <description>Technical field for retporting or listview criteria to know if the request exist less more than 30 days</description>
        <formula>Age_de_la_requete__c &gt;30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech &gt;30j</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Traite__c</fullName>
        <label>Traité</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Traitement_interrompu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Traitement interrompu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_d_indisponibilit__c</fullName>
        <label>Type d&apos;indisponibilité</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>Problème opérationnel</fullName>
                </value>
                <value>
                    <fullName>Problème PDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_de_point__c</fullName>
        <formula>Text(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type de point</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_du_moyen_de_scan_et_type__c</fullName>
        <formula>Anomalie__r.Description__c</formula>
        <label>Version du moyen de scan et type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recurrence_index__c</fullName>
        <description>Indice de recurrence</description>
        <label>Recurrence index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND ((6 AND 7) OR 8) AND 9</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ID_PUDO__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Secteur_Region__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>Age_de_la_requete__c</columns>
        <columns>Disponibilite_Pudo__c</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Conges_en_cours__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Point_relais_ne_repond_pas__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notEqual</operation>
            <value>PUS_FR_Gestion Contractuelle</value>
        </filters>
        <filters>
            <field>J_Vues_de_llistes__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Tech_Visibilite_DA__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.PUS_FR_Demarrage_d_activite</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Case.PUS_FR_Demarrage_d_activite</value>
        </filters>
        <filters>
            <field>Etat_Pudo__c</field>
            <operation>lessOrEqual</operation>
            <value>6</value>
        </filters>
        <label>000-Toutes les requêtes en cours</label>
        <language>fr</language>
        <sharedTo>
            <group>PUS_FR_Animateur_reseau</group>
            <group>PUS_FR_Animateur_reseau_siege</group>
            <group>PUS_FR_DOR</group>
            <group>PUS_FR_Gestion_Contractuelle</group>
            <group>PUS_FR_Gestion_Materiel</group>
            <group>PUS_FR_Lecture_Seule</group>
            <group>PUS_FR_Manager</group>
            <group>PUS_FR_Planificateur</group>
            <group>PUS_FR_Service_Client</group>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases_BNL</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND ((6 AND 7) OR 8)</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ID_PUDO__c</columns>
        <columns>Object_de_la_requete__c</columns>
        <columns>CASES.REASON</columns>
        <columns>Sous_motif_1__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Langue_parlee_dans_le_PUDO__c</columns>
        <columns>Disponibilite_Pudo__c</columns>
        <columns>Derniere_synchronisation__c</columns>
        <columns>Indispo_Date_Fin__c</columns>
        <columns>NAME</columns>
        <columns>Jours_restants_avant_la_fin_d_indisponib__c</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>Age_de_la_requete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Conges_en_cours__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Point_relais_ne_repond_pas__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notEqual</operation>
            <value>PUS_FR_Gestion Contractuelle</value>
        </filters>
        <filters>
            <field>J_Vues_de_llistes__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Tech_Visibilite_DA__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.DPD_BNL_Demarrage_d_activit,Case.DPD_HUN_Demarrage_d_activit</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Case.DPD_BNL_Demarrage_d_activit,Case.DPD_HUN_Demarrage_d_activit</value>
        </filters>
        <label>01 - All Requests In Progress</label>
        <sharedTo>
            <roleAndSubordinates>DPD_BNL</roleAndSubordinates>
            <roleAndSubordinates>DPD_HUN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ano_synchro_attente_de_traitement_GM</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4) AND 5 AND 6 AND 7 AND 8 AND 9 AND 10</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ID_PUDO__c</columns>
        <columns>Object_de_la_requete__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Region_BNL__c</columns>
        <columns>Disponibilite_Pudo__c</columns>
        <columns>Derniere_synchronisation__c</columns>
        <columns>NAME</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>Age_de_la_requete__c</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.PUS_FR_Anomalie_Synchro</value>
        </filters>
        <filters>
            <field>Point_relais_ne_repond_pas__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Date_de_rappel_planifiee__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Date_de_rappel_planifiee__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Conges_en_cours__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Indisponibilite_en_cours__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Etat_Pudo__c</field>
            <operation>equals</operation>
            <value>4,5,6</value>
        </filters>
        <filters>
            <field>Type_de_point__c</field>
            <operation>equals</operation>
            <value>2,3</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notEqual</operation>
            <value>PUS_FR_WebHelp</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>En attente de traitement</value>
        </filters>
        <label>02c-Ano Synchro-En attente de trait. GM</label>
        <sharedTo>
            <group>PUS_FR_Gestion_Materiel</group>
            <group>PUS_FR_Manager</group>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>I01_All_Requests_In_Progress</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 OR 6)</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ID_PUDO__c</columns>
        <columns>Object_de_la_requete__c</columns>
        <columns>CASES.REASON</columns>
        <columns>Sous_motif_1__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Langue_parlee_dans_le_PUDO__c</columns>
        <columns>Disponibilite_Pudo__c</columns>
        <columns>Derniere_synchronisation__c</columns>
        <columns>Indispo_Date_Fin__c</columns>
        <columns>NAME</columns>
        <columns>Jours_restants_avant_la_fin_d_indisponib__c</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>Age_de_la_requete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>11,Terminée</value>
        </filters>
        <filters>
            <field>Conges_en_cours__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Point_relais_ne_repond_pas__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Traitement_interrompu__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Date_de_rappel_planifiee__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Date_de_rappel_planifiee__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>I01 - All Requests In Progress</label>
        <language>fr</language>
        <sharedTo>
            <group>TECH_VL_I01_All_Requests_In_Progress</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>I02_My_Requests_In_Progress</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND (6 OR 7)</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ID_PUDO__c</columns>
        <columns>Object_de_la_requete__c</columns>
        <columns>CASES.REASON</columns>
        <columns>Sous_motif_1__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Langue_parlee_dans_le_PUDO__c</columns>
        <columns>Disponibilite_Pudo__c</columns>
        <columns>Derniere_synchronisation__c</columns>
        <columns>Indispo_Date_Fin__c</columns>
        <columns>NAME</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>Age_de_la_requete__c</columns>
        <columns>Rapport_QS__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Type_de_point__c</field>
            <operation>notEqual</operation>
            <value>-3,21</value>
        </filters>
        <filters>
            <field>Conges_en_cours__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>10,En attente exclusion,11,Terminée</value>
        </filters>
        <filters>
            <field>Point_relais_ne_repond_pas__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Traitement_interrompu__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Date_de_rappel_planifiee__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Date_de_rappel_planifiee__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>I02 - My Requests In Progress</label>
        <language>fr</language>
        <sharedTo>
            <group>TECH_VL_I02_My_Requests_In_Progress</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>I03_My_request_to_be_followed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>Object_de_la_requete__c</columns>
        <columns>CASES.REASON</columns>
        <columns>Sous_motif_1__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>I03 - My request to be followed</label>
        <language>fr</language>
        <sharedTo>
            <group>TECH_VL_I03_My_request_to_be_followed</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>I04_Request_of_my_Team</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>Object_de_la_requete__c</columns>
        <columns>CASES.REASON</columns>
        <columns>Sous_motif_1__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <label>I04 - Request of my Team</label>
        <language>fr</language>
        <sharedTo>
            <group>TECH_VL_I04_Request_of_my_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>I05_Synchronization_anomaly</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND (7 OR 8) AND 9</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ID_PUDO__c</columns>
        <columns>Object_de_la_requete__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>Secteur_Region__c</columns>
        <columns>Langue_parlee_dans_le_PUDO__c</columns>
        <columns>Disponibilite_Pudo__c</columns>
        <columns>Derniere_synchronisation__c</columns>
        <columns>Indispo_Date_Fin__c</columns>
        <columns>NAME</columns>
        <columns>Jours_restants_avant_la_fin_d_indisponib__c</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>Age_de_la_requete__c</columns>
        <columns>Rapport_QS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_de_la_requete__c</field>
            <operation>equals</operation>
            <value>Anomalie de synchronisation d’un relais</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>11,10,En attente exclusion,Terminée</value>
        </filters>
        <filters>
            <field>Point_relais_ne_repond_pas__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Conges_en_cours__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Indisponibilite_en_cours__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Etat_Pudo__c</field>
            <operation>notEqual</operation>
            <value>7,8,9</value>
        </filters>
        <filters>
            <field>Date_de_rappel_planifiee__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Date_de_rappel_planifiee__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Traitement_interrompu__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>I05 - Synchronization anomaly</label>
        <language>fr</language>
        <sharedTo>
            <group>TECH_VL_I05_Synchronization_anomaly</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>I06_PDA_Synchro_Problem</fullName>
        <booleanFilter>(1 OR 10) AND 2 AND 3 AND 4 AND 5 AND 6 AND (7 OR 8) AND 9</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ID_PUDO__c</columns>
        <columns>Object_de_la_requete__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Secteur_Region__c</columns>
        <columns>Langue_parlee_dans_le_PUDO__c</columns>
        <columns>Disponibilite_Pudo__c</columns>
        <columns>Indispo_Date_Fin__c</columns>
        <columns>NAME</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>Age_de_la_requete__c</columns>
        <columns>Rapport_QS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_de_la_requete__c</field>
            <operation>equals</operation>
            <value>Indisponibilité Problème PDA / Problème de synchronisation</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>11,10,En attente exclusion,Terminée</value>
        </filters>
        <filters>
            <field>Point_relais_ne_repond_pas__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Conges_en_cours__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Injoignabilite_en_cours_TECH__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Etat_Pudo__c</field>
            <operation>notEqual</operation>
            <value>7,8,9</value>
        </filters>
        <filters>
            <field>Date_de_rappel_planifiee__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Date_de_rappel_planifiee__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Traitement_interrompu__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Object_de_la_requete__c</field>
            <operation>equals</operation>
            <value>Indisponibilité Problème PDA / Panne PDA</value>
        </filters>
        <label>I06 - PDA/Synchro Problem</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
            <group>TECH_VL_I06_PDA_Synchro_Problem</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>I07_Operational_Problem</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND (7 OR 8) AND 9 AND 10</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ID_PUDO__c</columns>
        <columns>Object_de_la_requete__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Secteur_Region__c</columns>
        <columns>Langue_parlee_dans_le_PUDO__c</columns>
        <columns>Disponibilite_Pudo__c</columns>
        <columns>Derniere_synchronisation__c</columns>
        <columns>Indispo_Date_Fin__c</columns>
        <columns>NAME</columns>
        <columns>Jours_restants_avant_la_fin_d_indisponib__c</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>Age_de_la_requete__c</columns>
        <columns>Rapport_QS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_de_la_requete__c</field>
            <operation>equals</operation>
            <value>Indisponibilité Problème opérationnel Sinistre / Travaux / Santé</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>11,10,En attente exclusion,Terminée</value>
        </filters>
        <filters>
            <field>Point_relais_ne_repond_pas__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Conges_en_cours__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Injoignabilite_en_cours_TECH__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Etat_Pudo__c</field>
            <operation>notEqual</operation>
            <value>7,8,9</value>
        </filters>
        <filters>
            <field>Date_de_rappel_planifiee__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Date_de_rappel_planifiee__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Date_fin_Indispo_ChTech__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Traitement_interrompu__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>I07 - Operational Problem</label>
        <language>fr</language>
        <sharedTo>
            <group>TECH_VL_I07_Operational_Problem</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>I08_Unreachable</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND (6 OR 7) AND 8</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ID_PUDO__c</columns>
        <columns>Object_de_la_requete__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Secteur_Region__c</columns>
        <columns>Langue_parlee_dans_le_PUDO__c</columns>
        <columns>Disponibilite_Pudo__c</columns>
        <columns>Indispo_Date_Fin__c</columns>
        <columns>NAME</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>Age_de_la_requete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_de_la_requete__c</field>
            <operation>equals</operation>
            <value>Indisponibilité problème opérationnel - Injoignabilité</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>11,10,En attente exclusion,Terminée</value>
        </filters>
        <filters>
            <field>Point_relais_ne_repond_pas__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Conges_en_cours__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Traitement_interrompu__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Date_de_rappel_planifiee__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Date_de_rappel_planifiee__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Injoignabilite_en_cours_TECH__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>I08 - Unreachable</label>
        <language>fr</language>
        <sharedTo>
            <group>TECH_VL_I08_Unreachable</group>
        </sharedTo>
    </listViews>
</CustomObject>